Fix missed text-align on right-about-heading p

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,18 @@ animation-fill-mode: forwards;
     size: 280%;
 }
 
+#circle-container {
+
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+
+}
+
 #left-about {
 
     padding-top: 30px;
@@ -190,10 +202,15 @@ hr {
     text-align: right;
 }
 
+.right-about-heading p {
+
+    text-align: right;
+}
+
 #center-about {
 
     padding-top: 30px;
     width: 33%;
     margin: 0 auto;
-    background-color: green;
 }
+
